# miniserde_serde_parsing_differences

./: Cargo.toml  modrinth.index.json
src/: main.rs
