[package]
name = "miniserde_serde_parsing_differences"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniserde = "0.1.38"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
